Initial group by implementation completed. Non group columns are eliminated from the stream