@@ -24,11 +24,12 @@ public class StreamContext {
     private final Map<StreamAlias, Function<Object, Object>> streamAliasMap;
     private final Map<MemberAccessor, Function<Object, Object>> groupMemberAccessor;
 
-    private StreamContext(Map<StreamAlias, Function<Object, Object>> streamAliasMap) {
-        this.memberAccessMap = Collections.emptyMap();
+    private StreamContext(Map<StreamAlias, Function<Object, Object>> streamAliasMap, Map<MemberAccessor, Function<Object, Object>> memberAccessMap) {
+        this.memberAccessMap = memberAccessMap;
         this.streamAliasMap = streamAliasMap;
         this.groupMemberAccessor = Collections.emptyMap();
     }
+
 
     public Function<Object, Object> get(MemberAccessor memberAccessor) {
         List<Pair<MemberAccessor, Function<Object, Object>>> l = memberAccessMap.entrySet().stream().map(Pair::of)
@@ -39,7 +40,7 @@ public class StreamContext {
         if (l.size() == 0) {
             return get(memberAccessor.streamAlias(), memberAccessor.method());
         } else if (l.size() == 1) {
-            return l.get(0).right().andThen(o -> ReflectionUtil.invoke(memberAccessor.method(), o));
+            return l.get(0).right();
         } else {
             return l.stream()
                     .filter(p -> p.left().streamAlias().name().isBlank())
@@ -70,11 +71,11 @@ public class StreamContext {
     }
 
     public static StreamContext init(Class<?> clazz) {
-        return new StreamContext(Map.of(StreamAlias.of(clazz), Function.identity()));
+        return new StreamContext(Map.of(StreamAlias.of(clazz), Function.identity()), Collections.emptyMap());
     }
 
     public static StreamContext init(String alias, Class<?> clazz) {
-        return new StreamContext(Map.of(StreamAlias.of(clazz, alias), Function.identity()));
+        return new StreamContext(Map.of(StreamAlias.of(clazz, alias), Function.identity()), Collections.emptyMap());
     }
 
     public Class<?> classAt(int i) {
@@ -113,6 +114,20 @@ public class StreamContext {
             newMap.put(otherKeys.next(), baseMapper.get(max++));
         }
 
-        return new StreamContext(newMap);
+        return new StreamContext(newMap, Collections.emptyMap());
+    }
+
+    public StreamContext groupBy(List<MemberAccessor> groupBys) {
+        if (groupBys.size() == 1) {
+            return new StreamContext(Collections.emptyMap(), Map.of(groupBys.get(0), Function.identity()));
+        }
+        Map<MemberAccessor, Function<Object, Object>> memberAccessorFunctionMap = new HashMap<>();
+        int i = 0;
+        for (MemberAccessor groupBy : groupBys) {
+            memberAccessorFunctionMap.put(groupBy, baseMapper.get(i));
+            i++;
+        }
+
+        return new StreamContext(Collections.emptyMap(), memberAccessorFunctionMap);
     }
 }
